plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.plugin.compose'
}

// ==================== 签名配置 ====================
def signingPropsFile = rootProject.file('signing.properties')
def signingProps = new Properties()
def usePropertiesSigning = false
if (signingPropsFile.exists()) {
    signingPropsFile.withInputStream { stream ->
        signingProps.load(stream)
    }
    usePropertiesSigning = true
}

def githubRunNumber = System.getenv("GITHUB_RUN_NUMBER") ?: "1"

android {
    namespace "cn.luke.wearsync"
    compileSdk = 36

    defaultConfig {
        applicationId "cn.luke.wearsync"
        minSdk = 35
        targetSdk = 36
        versionCode githubRunNumber.toInteger()
        versionName "1.0.${githubRunNumber}"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    lint {
        disable += ['GradleDependency', 'NewerVersionAvailable', 'LockedOrientationActivity']
        checkReleaseBuilds = false
        abortOnError = false
    }

    signingConfigs {
        debugging {
            storeFile file('../debug.keystore')
            keyAlias 'androiddebugkey'
            storePassword 'android'
            keyPassword 'android'
        }
        release {
            if (usePropertiesSigning) {
                storeFile file(signingProps['STORE_FILE'])
                storePassword signingProps['STORE_PASSWORD']
                keyAlias signingProps['KEY_ALIAS']
                keyPassword signingProps['KEY_PASSWORD']
            }
        }
    }

    buildTypes {
        debug {
            signingConfig signingConfigs.debugging
        }
        release {
            signingConfig usePropertiesSigning ? signingConfigs.release : signingConfigs.debugging
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        // ✅ 目标平台设为 22
        sourceCompatibility JavaVersion.VERSION_22
        targetCompatibility JavaVersion.VERSION_22
        
        // ✅ 核心开启：允许将高版本语法脱糖给更低版本的设备运行
        coreLibraryDesugaringEnabled = true
    }

    // ✅ 新版 AGP 9.0+ 适用的 Kotlin 全局配置写法（替代了旧的 kotlinOptions）
    kotlin {
        compilerOptions {
            jvmTarget = org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_22
        }
    }

    buildFeatures {
        buildConfig true
        compose true
        viewBinding true
    }
}

// ✅ 保持 Java 编译器参数稳定
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '-Xlint:deprecation', 
        '-Xlint:unchecked', 
    ]
    options.deprecation = true
}

// ✅ 适配 Kotlin 2.x + AGP 9.x 的编译器参数追加
tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    compilerOptions.freeCompilerArgs.add("-Xjdk-release=22")
}

dependencies {
    // ==================== 核心脱糖依赖 ====================
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'

    // ==================== AndroidX 基础组件 ====================
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.preference:preference-ktx:1.2.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.core:core-ktx:1.16.0'

    // ==================== Compose 最新套件 ====================
    implementation platform('androidx.compose:compose-bom:2024.09.00')
    implementation 'androidx.activity:activity-compose:1.10.1'
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.foundation:foundation'
    implementation 'androidx.compose.material3:material3'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    debugImplementation 'androidx.compose.ui:ui-tooling'

    // ==================== Wearable 通讯底层 ====================
    implementation 'com.google.android.gms:play-services-wearable:20.0.1'
    implementation 'androidx.wear:wear-remote-interactions:1.2.0'

    // ==================== CameraX 联控相机组件 ====================
    def camerax_version = "1.5.0"
    implementation "androidx.camera:camera-core:${camerax_version}"
    implementation "androidx.camera:camera-camera2:${camerax_version}"
    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
    implementation "androidx.camera:camera-extensions:${camerax_version}"

    // ==================== Kotlin 协程与日志 ====================
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.10.2"
    implementation "com.jakewharton.timber:timber:5.0.1"

    // ==================== 测试依赖 ====================
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
}
